frontend: fix missing space between tree nodes icon and the text

--- a/web/web-frontend/src/app/functionalities/features/tests-runner/tests-runner-tree/runner-tree-node/runner-tree-node.component.scss
+++ b/web/web-frontend/src/app/functionalities/features/tests-runner/tests-runner-tree/runner-tree-node/runner-tree-node.component.scss
@@ -38,6 +38,7 @@
 .tree-node-text {
     white-space: normal;
     display: inline-block;
+    margin-left: 5px;
 }
 
 .tree-children {
